# labas6

./: CMakeLists.txt
Arrlist/: Arrlist_main.cpp  CMakeLists.txt
arrlistlib/: CMakeLists.txt  arrlist.cpp  arrlist.h  queue.h
arrlisttest/: ArrlistTest.cpp  CMakeLists.txt
